--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <img class="d-block w-100" src="laptopmac.jpg" alt="Thirdslide" style="height:390px; width:300px;">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Welcome in CodeCommunity</h2>
-                    <p>Technology News, Deevlopment and Trends</p>
+                    <p>Technology News, Devlopment and Trends</p>
                     <button type="button" class="btn btn-danger">Technolgy</button>
                     <button type="button" class="btn btn-primary">Web devlopment</button>
                     <button type="button" class="btn btn-success">Tech Fun</button>
@@ -153,7 +153,7 @@
                     <div class="card-body d-flex flex-column align-items-start">
                         <strong class="d-inline-block mb-2 text-primary">iCode</strong>
                         <h3 class="mb-0">
-                            <a class="text-dark" href="#">For Full Satck Devloper</a>
+                            <a class="text-dark" href="#">For Full Satck Developer</a>
                         </h3>
                         <div class="mb-1 text-muted">Aug 22</div>
                         <p class="card-text mb-auto">A full-stack developer is a developer or engineer who can build both the front end and the back end of a website. The front end (the parts of a website a user sees and interacts with) and the back end (the behind-the-scenes data storage and processing) require different skill sets.</p>
@@ -169,7 +169,7 @@
                     <div class="card-body d-flex flex-column align-items-start">
                         <strong class="d-inline-block mb-2 text-success">iCode</strong>
                         <h3 class="mb-0">
-                            <a class="text-dark" href="#">How to prepare for MNC compinies.</a>
+                            <a class="text-dark" href="#">How to prepare for MNC companies.</a>
                         </h3>
                         <div class="mb-1 text-muted">Sep 11</div>
                         <p class="card-text mb-auto"> Give verbal and non verbal cues while you are listening to the interviewer.
